--- a/index.html
+++ b/index.html
@@ -311,6 +311,9 @@ We look forward to welcoming you!
                 <div class="flex justify-center">
                     <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/4addb313696cb99997a673b346f47855d2d5f0d7/NotebookLM%20Mind%20Map%20(12).png?raw=true" alt="NotebookLM Mind Map 6" class="rounded-lg shadow-lg">
                 </div>
+                <div class="flex justify-center">
+                    <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/405993a13c686f7451168e2cfb8e9d7e0159f262/NotebookLM%20Mind%20Map%20(13).png?raw=true" alt="NotebookLM Mind Map 7" class="rounded-lg shadow-lg">
+                </div>
             </div>
         </section>
 
@@ -1164,7 +1167,7 @@ text-center
                     <p class="font-bold text-xl text-indigo-700 mb-2">प्रश्न: गया जी की अर्थव्यवस्था और शिक्षा प्रणाली क्या है?</p>
                     <p>उत्तर: गया जी बिहार का पटना के बाद दूसरा सबसे बड़ा आर्थिक योगदानकर्ता है।<br>
                     <strong>आर्थिक गतिविधियाँ:</strong> जिले की अर्थव्यवस्था में कृषि का प्रभुत्व है (चावल, गेहूँ, मक्का, दालें, आलू), सिंचाई द्वारा समर्थित। पशुधन भी महत्वपूर्ण है। शहर में, अगरबत्ती, तिलकुट, लाई, हथकरघा और बिजली करघा वस्त्र, और पत्थर की नक्काशी जैसे छोटे पैमाने के उद्योग फलते-फूलते हैं। धार्मिक पर्यटन (तीर्थयात्री आवास, दुकानें, परिवहन) एक प्रमुख सेवा क्षेत्र है।<br>
-                    <strong>शिक्षा:</strong> गया जी एक शैक्षिक केंद्र है। इसमें दक्षिण बिहार केंद्रीय विश्वविद्यालय, मगध विश्वविद्यालय, भारतीय प्रबंधन संस्थान बोधगया, अनुग्रह नारायण मगध मेडिकल कॉलेज और अस्पताल, अधिकारी प्रशिक्षण अकादमी, गया कॉलेज ऑफ इंजीनियरिंग और कई अन्य कॉलेज शामिल हैं। शहर की साक्षरता दर (7 वर्ष से अधिक आयु) 2011 तक लगभग 85.7% है, जो जिले के औसत से काफी ऊपर है।<br>
+                    <strong>शिक्षा:</strong> गया जी एक शैक्षिक केंद्र है। इसमें दक्षिण बिहार केंद्रीय विश्वविद्यालय, मगध विश्वविद्यालय, भारतीय प्रबंधन संस्थान बोधगया, अनुग्रह नारायण मगध मेडिकल College और अस्पताल, अधिकारी प्रशिक्षण अकादमी, गया College ऑफ इंजीनियरिंग और कई अन्य College शामिल हैं। शहर की साक्षरता दर (7 वर्ष से अधिक आयु) 2011 तक लगभग 85.7% है, जो जिले के औसत से काफी ऊपर है।<br>
                     <strong>शासन:</strong> गया जी, गया जिले और मगध मंडल का प्रशासनिक मुख्यालय है, जिसका प्रशासन गया नगर निगम द्वारा संभाला जाता है।</p>
                 </div>
                  <div>
