--- a/index.html
+++ b/index.html
@@ -314,6 +314,12 @@ We look forward to welcoming you!
                 <div class="flex justify-center">
                     <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/405993a13c686f7451168e2cfb8e9d7e0159f262/NotebookLM%20Mind%20Map%20(13).png?raw=true" alt="NotebookLM Mind Map 7" class="rounded-lg shadow-lg">
                 </div>
+                <div class="flex justify-center">
+                    <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/405993a13c686f7451168e2cfb8e9d7e0159f262/NotebookLM%20Mind%20Map%20(14).png?raw=true" alt="NotebookLM Mind Map 8" class="rounded-lg shadow-lg">
+                </div>
+                <div class="flex justify-center">
+                    <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/9912a520af67c7bf13ffb00bff8d6aa36937d14e/NotebookLM%20Mind%20Map%20(15).png?raw=true" alt="NotebookLM Mind Map 9" class="rounded-lg shadow-lg">
+                </div>
             </div>
         </section>
 
