--- a/index.html
+++ b/index.html
@@ -320,6 +320,19 @@ We look forward to welcoming you!
                 <div class="flex justify-center">
                     <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/9912a520af67c7bf13ffb00bff8d6aa36937d14e/NotebookLM%20Mind%20Map%20(15).png?raw=true" alt="NotebookLM Mind Map 9" class="rounded-lg shadow-lg">
                 </div>
+                <div class="flex justify-center">
+                    <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/8efd3c72e6c7d83afdeefb84ca0fb787a4858384/NotebookLM%20Mind%20Map%20(16).png?raw=true" alt="NotebookLM Mind Map 10" class="rounded-lg shadow-lg">
+                </div>
+                <div class="flex justify-center">
+                    <a href="https://drive.google.com/file/d/1mbFkN5S4l3jQhxVnzcBlRphScT0a1N30/view?usp=sharing" target="_blank">
+                        <img src="https://placehold.co/600x400/000000/FFFFFF/png?text=Mind+Map+11" alt="NotebookLM Mind Map 11" class="rounded-lg shadow-lg">
+                    </a>
+                </div>
+                <div class="flex justify-center">
+                    <a href="https://drive.google.com/drive/folders/1kDju7Q42Z9sN82tyL2UgAe4RJo5-aKot?usp=sharing" target="_blank">
+                        <img src="https://placehold.co/600x400/000000/FFFFFF/png?text=Mind+Map+12" alt="NotebookLM Mind Map 12" class="rounded-lg shadow-lg">
+                    </a>
+                </div>
             </div>
         </section>
 
@@ -1159,7 +1172,7 @@ text-center
                     <p class="font-bold text-xl text-indigo-700 mb-2">प्रश्न: गया जी की सांस्कृतिक विरासत और त्योहार क्या हैं?</p>
                     <p>उत्तर: गया जी की संस्कृति आध्यात्मिकता, कला और पाक परंपराओं का एक समृद्ध मिश्रण है।<br>
                     <strong>पितृपक्ष मेला:</strong> सितंबर-अक्टूबर में 16 दिनों का यह हिंदू त्योहार पूर्वजों की पूजा के लिए लाखों भक्तों को आकर्षित करता है, जो फल्गु के किनारे पिण्डदान अनुष्ठान करते हैं।<br>
-                    <strong>वेसाक (बुद्ध पूर्णिमा):</strong> अप्रैल-मई में मनाया जाने वाला यह बौद्धों का सबसे महत्वपूर्ण त्योहार है, जो बुद्ध के जन्म, ज्ञान और महापरिनिर्वाण का प्रतीक है।<br>
+                    <strong>वेसाक (बुद्ध पूर्णिमा):</strong> अप्रैल-मई में मनाया जाने वाला यह बौद्धों का सबसे महत्वपूर्ण त्योहार है, जो बुद्ध के जन्म, ज्ञान और महापरिनirvana का प्रतीक है।<br>
                     <strong>छठ पूजा:</strong> यह सूर्य देव को समर्पित एक प्राचीन हिंदू त्योहार है, जो विशेष रूप से बिहार में उपवास और उगते व डूबते सूर्य को अर्घ्य देने के साथ मनाया जाता है।<br>
                     <strong>पाक विरासत:</strong> यहाँ के व्यंजनों में बिहारी और तिब्बती प्रभाव हैं। प्रसिद्ध व्यंजनों में 'लिट्टी चोखा', 'तिलकुट' (तिल और गुड़ से बनी मिठाई), 'मोमोस' (तिब्बती पकौड़ी), 'खाजा' (परतदार पेस्ट्री) और 'सत्तू पराठा' शामिल हैं।<br>
                     <strong>अद्वितीय मान्यताएँ:</strong> एक अनोखी मान्यता है कि फल्गु नदी सीता के शाप के कारण अधिकतर भूमिगत बहती है, और इसका पानी केवल खुदाई करने पर ही सतह पर आता है। यह इसके अनुष्ठानों के लिए नदी की पवित्रता को बढ़ाता है।</p>
